Added two more Chombo references

--- a/docs/biblio/amr.bib
+++ b/docs/biblio/amr.bib
@@ -519,6 +519,33 @@ year = {1984}
   year = 	 2013,
   volume = 	 "to appear"}
 
+
+
+@InProceedings{st-sh-li-ke-2009,
+  author = 	 "Brian Van Straalen and John Shalf and Terry Ligocki and
+                  Noel Keen and Woo-Sun Yang",
+  title = 	 "{Scalability Challenges for Massively Parallel AMR Applications}",
+  booktitle = "{IPDPS '09 Proceedings of the 2009 IEEE International Symposium on
+                   Parallel and Distributed Processing}",
+  pages = 	 "1-12",
+  year = 	 2009,
+  doi = 	 "10.1109/IPDPS.2009.5161014",
+  organization = "{IEEE Computer Society Washington, DC}"}
+
+
+
+@InProceedings{st-co-gr-ke-2011,
+  author = 	 "Brian Van Straalen and Phil Colella and Daniel T. Graves and Noel Keen",
+  title = 	 "{Petascale Block-Structured AMR Applications Without Distributed
+                   Meta-data}",
+  booktitle = "{Euro-Par'11 Proceedings of the 17th international conference on
+                   Parallel processing}",
+  pages = 	 "277-386",
+  year = 	 2011,
+  volume = 	 "II",
+  isbn = 	 "{978-3-642-23396-8}",
+  publisher = "Springer-Verlag"}
+
 %% ------------------------------ END AMR Codes --------------------------------
 
 %% ------------------------ Discrete Duality FV Schemes ------------------------
