--- a/docs/parco13/paper.tex
+++ b/docs/parco13/paper.tex
@@ -626,7 +626,7 @@ threads per node executed by the
   \label{tab:weakscale}
 \end{table}%
 %
-We have examined weak scalability as well by using four times as many MPI
+We examine weak scalability as well by using four times as many MPI
 processes for each level increase.
 % , from level 6 at 64 cores to level 11 at 16,384.
 Up to 4,096 cores, the exchange times stay consistently below 16\% of the time
@@ -723,7 +723,6 @@ To showcase a multiblock connectivity, we include results for the spherical Exam
 \Fig{spherical}, together with a strong scaling table from 16 to 4,096 MPI ranks.
 
 \section{Conclusion}
-
 
 We have presented the integration of an MPI-based forest-of-octrees adaptive
 meshing code, \pforest, with a numerical solver for hyperbolic conservation
